# pompeii_golang

./: .gitignore  README.md  go.mod  go.sum  package-lock.json  pyproject.toml  tsconfig.json
assets/: vocab_list_gcse_dvl.csv  vocab_list_igcse_full.csv
cmd/pompeii/: main.go
internal/database/: database.db  db_definition.sql  import_data.py  init_db.py  reverse_lemmatize.py
internal/handlers/: handlers.go
internal/helpers/: helpers.go  helpers_test.go
internal/middleware/: logging.go
internal/models/: structs.go
internal/templates/: templates.go  templates_test.go
static/css/: game.css  game_over.css  game_settings.css  style.css  vocab_table.css
static/js/: classic.js  game.js  table_search.js
static/ts/: classic.ts  game.ts  table_search.ts
templates/: base.html  classic.html  game.html  game_over.html  game_settings.html  index.html  vocabulary.html
